# SpelRight

./: Cargo.toml  README.md  mise.toml  words.txt
.cargo/: config.toml
benches/: check.rs  check_suggestions.rs  loading.rs  suggestions.rs
dataset_fixer/: Cargo.toml
dataset_fixer/src/: main.rs
src/: bk_tree.rs  dict_creator.rs  dict_metadata.rs  english.rs  language.rs  levenstein_dist.rs  lib.rs  load_dict.rs  main.rs  old.rs  simd_find_matching_prefix.rs  spell_checker.rs
src/matching/: match_word.rs  mod.rs  simd_find_matching_prefix.rs
src/old/: lib_old.rs
src/spell_checkers/: ascii.rs  mod.rs  normalized.rs  simple_len_group.rs  utf8.rs
tests/: suggest.rs
