cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "spel-right"
description = "A fast and lightweight spell checker and suggester."
version = "0.3.1"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/Zefirchiky/SpelRight"

[dependencies]
rayon = "1.11.0"

[profile.dev]
incremental = true
rustflags = ["-Zthreads=8"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
trim-paths = "all" # Removes potentially privileged information from binaries.
rustflags = [
    "-Cdebuginfo=0",
    "-C",
    "target-cpu=native",
    "-Zlocation-detail=none",
    "-Zfmt-debug=none",
    "-Zunstable-options"
]

[dev-dependencies]
criterion = "0.7.0"
