[package]
name = "spel-right"
description = "A fast and lightweight spell checker and suggester."
version = "0.5.1"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/Zefirchiky/SpelRight"

[dependencies]
rayon = "1.11.0"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[dev-dependencies]
criterion = "0.7.0"
